syntax = "proto3";

package rivet.backend.pkg.kv_config.namespace_get;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/kv.proto";

message Request {
	repeated rivet.common.Uuid namespace_ids = 1;
}

message Response {
	message Namespace {
		rivet.common.Uuid namespace_id = 1;
		rivet.backend.kv.NamespaceConfig config = 2;
	}

	repeated Namespace namespaces = 1;
}
